--- a/src/townyperms.yml
+++ b/src/townyperms.yml
@@ -25,6 +25,7 @@ nomad:
     - towny.town.resident
     - towny.town.spawn.public
     - towny.chat.general
+    - towny.wild.
     
 # This section of permissions covers players who are members of a town.
 towns:
